--- a/index.html
+++ b/index.html
@@ -975,8 +975,8 @@
         <!-- Footer -->
         <footer class="text-center py-8 mt-8 border-t border-[rgba(212,175,55,0.1)]">
             
-            <p class="text-gray-400 mb-2">&copy; 2025 خطة العودة إلى الله. جميع الحقوق محفوظة.</p>
-            <p class="text-gray-500 text-sm">تصميم وتطوير بقلوب محبة لله ورسوله</p>
+            <p class="text-gray-400 mb-2">&copy;  خطة العودة إلى الله </p>
+          <p class="text-gray-500 text-sm">Designed and developed by Hazem Amara</p>
         </footer>
     </div>
 
