--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@
         <footer class="text-center py-8 mt-8 border-t border-[rgba(212,175,55,0.1)]">
             
             <p class="text-gray-400 mb-2">&copy;  خطة العودة إلى الله </p>
-          <p class="text-gray-500 text-sm">Designed and developed by Hazem Amara</p>
+          <p class="text-gray-500 text-sm">Designed and developed by Hazem Emara</p>
         </footer>
     </div>
 
